feat(3-Images-And-Tables): Finish Practice-1
n

--- a/3-Images-And-Tables/index.html
+++ b/3-Images-And-Tables/index.html
@@ -7,15 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <img src="download.jpg" alt="1">
-    <img src="download.jpg" alt="2">
-    <img src="download.jpg" alt="3">
-    <img src="download.png" alt="4">
-    <img src="download.png" alt="5">
-    <img src="download.png" alt="6">
-    <img src="download.png" alt="7">
-    <img src="og_image.jpg" alt="8">
-    <img src="og_image.jpg" alt="9">
-    <img src="og_image.jpg" alt="10">
+   <table border="1" width="500" height="500">
+         <tr>
+             <td></td>
+             <td rowspan=2 colspan="2" bgcolor="red"></td>
+         </tr>
+        <tr>
+                <td></td>
+               
+        </tr>
+        <tr>
+                <td rowspan=2 bgcolor="blue"></td>
+                <td rowspan=2></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td bgcolor="yellow"></td>
+                
+        </tr>
+   </table>
+
 </body>
 </html>
