feat(4-HTML-Forms): Finish Tutorial-2 Password field added

--- a/4-HTML-Forms/index.html
+++ b/4-HTML-Forms/index.html
@@ -9,6 +9,8 @@
 	<input type="text">
 	<label for="lastname">Last name</label>
 	<input type="text">
+	<label for="password">Password</label>
+	<input type="password">
 </form>
 </body>
 </html>
