feat(4-HTML-Forms): Finish practice-2

--- a/4-HTML-Forms/index.html
+++ b/4-HTML-Forms/index.html
@@ -5,40 +5,37 @@
 </head>
 <body>
 <form action="#" method="Post">
-	<label for="Phone">Phone:</label>
-	<input type="number" name="Phone" min="1" max="9" required="*">
+	<label for="Name">Name</label>
+	<input type="text" name="name" placeholder="Antoni Asatiani">
 	<br>
-	<label for="Email">Email:</label>
-	<input type="Email" name="Email" required="*">
+	<label for="Email">Email</label>
+	<input type="email" name="Email" placeholder="anton.asatiani@gmail.com">
 	<br>
-	<label for="Password">Password:</label>
-	<input type="Password" name="Password" required="*">
+	<label for="Password">Password</label>
+	<input type="Password" name="Password" placeholder="*****">
+	<br>	
+	<label for="Number">Number</label>
+	<input type="Number" name="Number" placeholder="42">
 	<br>
-	<label for="CPassword">Confirm Password:</label>
-	<input type="Password" name="CPassword" required="*">
+	<label for="Date">Date</label>
+	<input type="Date" name="date">
+	<br>	
+	<label for="Time">Time</label>
+	<input type="Time" name="Time" >
+	<br>	
+	<label for="Color">Color</label>
+	<input type="color" name="color">
 	<br>
-	<label for="Nickname">Nickname:</label>
-	<input type="text" name="Nickname" required="*">
+	<label for="Range">Range</label>
+	<input type="range" name="range">
 	<br>
-	<label for="Residence">Residence:</label>
-	<select name="Residence" required="*">
-		<option>Tbilisi</option>
-		<option>Kiev</option>
-		<option>Rome</option>
-	</select>
+	<label for="Description">Description</label>
+	<textarea rows=4 cols=30 name="Description"></textarea>
 	<br>
-	<label for="Website">Website:</label>
-	<input type="text" name="Website" placeholder="Website" required="*">
 	<br>
-	<label for="EULA">I have read the <a href="www.google.com">agreement</a>:</label>
-	<input type="checkbox" name="EULA" required="*">
 	<br>
-	<input type="submit" value="register">
-	<br>
-	
-	
-	
-	
+	<input type="submit" value="submit">
+	<input type="reset">
 </form>
 </body>
 </html>
