--- a/4-HTML-Forms/index.html
+++ b/4-HTML-Forms/index.html
@@ -5,37 +5,40 @@
 </head>
 <body>
 <form action="#" method="Post">
-	<label for="Name">Name</label>
-	<input type="text" name="name" placeholder="Antoni Asatiani">
-	<br>
-	<label for="Email">Email</label>
-	<input type="email" name="Email" placeholder="anton.asatiani@gmail.com">
-	<br>
-	<label for="Password">Password</label>
-	<input type="Password" name="Password" placeholder="*****">
-	<br>	
-	<label for="Number">Number</label>
-	<input type="Number" name="Number" placeholder="42">
-	<br>
-	<label for="Date">Date</label>
-	<input type="Date" name="date">
-	<br>	
-	<label for="Time">Time</label>
-	<input type="Time" name="Time" >
-	<br>	
-	<label for="Color">Color</label>
-	<input type="color" name="color">
-	<br>
-	<label for="Range">Range</label>
-	<input type="range" name="range">
-	<br>
-	<label for="Description">Description</label>
-	<textarea rows=4 cols=30 name="Description"></textarea>
+	<label for="fullname">Full Name:</label>
+	<input type="text" name="Name" placeholder="Enter full name">
 	<br>
 	<br>
+	<label for="Email">Email address:</label>
+	<input type="email" name="Email" placeholder="Enter Email">
 	<br>
-	<input type="submit" value="submit">
-	<input type="reset">
+	<br>
+	<label for="Communication">Communication:</label>
+	<br>
+	<input type="checkbox" name="Communication">
+	<label for="c-email">Email</label>
+	<br>
+	<input type="checkbox" name="Communication">
+	<label for="c-sms">SMS</label>
+	<br>
+	<input type="checkbox" name="Communication">
+	<label for="c-Phone">Phone</label>
+	<br>
+	<br>
+	<label for="UserGroup">User Group:</label>
+	<br>
+	<input type="radio" name="salesperson">
+	<label for="salesperson">Sales Person</label>
+	<input type="radio" name="customer">
+	<label for="customer">Customer</label>
+	<br>
+	<br>
+	<br>
+	<input type="submit" value="Submit">
+	<input type="reset" value="Cancel"> 
+
+
+
 </form>
 </body>
 </html>
