feat(7-Inheritance): practice-1 update: change button tag with btn class

--- a/7-Inheritance/index.html
+++ b/7-Inheritance/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <button class="primary">Primary</button>
-    <button class="default">Default</button>
-    <button class="dashed">Dashed</button>
-    <button class="danger">Danger</button>
+    <button class="primary btn">Primary</button>
+    <button class="default btn">Default</button>
+    <button class="dashed btn">Dashed</button>
+    <button class="danger btn">Danger</button>
 </body>
 
 </html>
