feat(7-Inheritance): Finish practice-2

--- a/7-Inheritance/index.html
+++ b/7-Inheritance/index.html
@@ -10,10 +10,25 @@
 </head>
 
 <body>
-    <button class="primary btn">Primary</button>
-    <button class="default btn">Default</button>
-    <button class="dashed btn">Dashed</button>
-    <button class="danger btn">Danger</button>
+    <h1>Default</h1>
+    <button class="primary btn ">Primary</button>
+    <button class="default btn ">Default</button>
+    <button class="dashed btn ">Dashed</button>
+    <button class="danger btn ">Danger</button>
+    <br>
+    <h1>Small</h1>
+    <br>
+    <button class="primary btn small">Primary</button>
+    <button class="default btn small">Default</button>
+    <button class="dashed btn small">Dashed</button>
+    <button class="danger btn small">Danger</button>
+    <br>
+    <h1>Large</h1>
+    <br>
+    <button class="primary btn large">Primary</button>
+    <button class="default btn large">Default</button>
+    <button class="dashed btn large">Dashed</button>
+    <button class="danger btn large">Danger</button>
 </body>
 
 </html>
