feat(7-Inheritance): Finish practice-3

--- a/7-Inheritance/index.html
+++ b/7-Inheritance/index.html
@@ -18,14 +18,14 @@
     <br>
     <h1>Small</h1>
     <br>
-    <button class="primary btn small">Primary</button>
+    <button class="primary btn small ">Primary</button>
     <button class="default btn small">Default</button>
-    <button class="dashed btn small">Dashed</button>
-    <button class="danger btn small">Danger</button>
+    <button class="dashed btn small" >Dashed</button>
+    <button class="danger btn small ">Danger</button>
     <br>
     <h1>Large</h1>
     <br>
-    <button class="primary btn large">Primary</button>
+    <button class="primary btn large ghost" >Primary</button>
     <button class="default btn large">Default</button>
     <button class="dashed btn large">Dashed</button>
     <button class="danger btn large">Danger</button>
