feat(8-DOM): Finish practice-1

--- a/8-DOM/index.html
+++ b/8-DOM/index.html
@@ -8,6 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+<div class="article">
+	<h1>Taste it guys</h1>
+	<div class="articles-detail">
+		<img src="assets/khachapuri.jpg">
+		<span>Khachapuri</span>
+		<a href="http://www.restornebi.com/">www.restornebi.com/</a>
+	</div>
+	<div class="articles-detail">
+		<img src="assets/chqmeruli.jpg">
+		<span>chqmeruli</span>
+		<a href="http://www.restornebi.com/">ww.restornebi.com/</a>
+	</div>
+	<div class="articles-detail">
+		<img src="assets/satsivi2.jpg">
+		<span>satsivi</span>
+		<a href="http://www.restornebi.com/">www.restornebi.com/</a>
+	</div>
+	<div class="articles-detail">
+		<img src="assets/khinkali.jpg">
+		<span>Kinkali</span>
+		<a href="http://www.restornebi.com/">www.restornebi.com/</a>
+	</div>	
+</div>
+
 </body>
 </html>
