feat(8-DOM): Finish practice-2  some issues with name and date

--- a/8-DOM/index.html
+++ b/8-DOM/index.html
@@ -8,28 +8,84 @@
     <title>Document</title>
 </head>
 <body>
-<div class="article">
-	<h1>Taste it guys</h1>
-	<div class="articles-detail">
-		<img src="assets/khachapuri.jpg">
-		<span>Khachapuri</span>
-		<a href="http://www.restornebi.com/">www.restornebi.com/</a>
+<div class="block">
+	<div class="list-items">
+		<ul class="list">
+			<li><img src="assets/document.png">2016 Conference Presentation</li>
+			<li><img src="assets/document.png">New Contoso Collaboration for Conference Pre...</li>
+			<li><img src="assets/document.png">Spec Sheet for design</li>
+		</ul>
+		<span>+3 more</span>
 	</div>
-	<div class="articles-detail">
-		<img src="assets/chqmeruli.jpg">
-		<span>chqmeruli</span>
-		<a href="http://www.restornebi.com/">ww.restornebi.com/</a>
+	<div class="list-second">
+		<h5>Marketing Documents</h5>
+		<span class="files-count">6 files where uploaded</span>
+		<div class="list-user">
+			<img src="assets/images.jpg">	
+			<p>Elon Musk</p>
+			<span>Created Feb 23, 2016</span>
+		</div>
+		<div class="list-bottom">
+			<img src="assets/icon-1.png">
+			<img src="assets/icon-2.png">
+			<img src="assets/icon-3.png">
+			<span>432</span>
+			<img src="assets/icon-4.png">
+		</div>
 	</div>
-	<div class="articles-detail">
-		<img src="assets/satsivi2.jpg">
-		<span>satsivi</span>
-		<a href="http://www.restornebi.com/">www.restornebi.com/</a>
+</div>
+<div class="block">
+	<div class="list-items">
+		<ul class="list">
+			<li><img src="assets/document.png">2016 Conference Presentation</li>
+			<li><img src="assets/document.png">New Contoso Collaboration for Conference Pre...</li>
+			<li><img src="assets/document.png">Spec Sheet for design</li>
+		</ul>
+		<span>+3 more</span>
 	</div>
-	<div class="articles-detail">
-		<img src="assets/khinkali.jpg">
-		<span>Kinkali</span>
-		<a href="http://www.restornebi.com/">www.restornebi.com/</a>
-	</div>	
+	<div class="list-second">
+		<h5>Marketing Documents</h5>
+		<span class="files-count">6 files where uploaded</span>
+		<div class="list-user">
+			<img src="assets/images.jpg">	
+			<p>Elon Musk</p>
+			<span>Created Feb 23, 2016</span>
+		</div>
+		<div class="list-bottom">
+			<img src="assets/icon-1.png">
+			<img src="assets/icon-2.png">
+			<img src="assets/icon-3.png">
+			<span>432</span>
+			<img src="assets/icon-4.png">
+		</div>
+	</div>
+</div>
+
+<div class="block">
+	<div class="list-items">
+		<ul class="list">
+			<li><img src="assets/document.png">2016 Conference Presentation</li>
+			<li><img src="assets/document.png">New Contoso Collaboration for Conference Pre...</li>
+			<li><img src="assets/document.png">Spec Sheet for design</li>
+		</ul>
+		<span>+3 more</span>
+	</div>
+	<div class="list-second">
+		<h5>Marketing Documents</h5>
+		<span class="files-count">6 files where uploaded</span>
+		<div class="list-user">
+			<img src="assets/images.jpg">	
+			<p>Elon Musk</p>
+			<span>Created Feb 23, 2016</span>
+		</div>
+		<div class="list-bottom">
+			<img src="assets/icon-1.png">
+			<img src="assets/icon-2.png">
+			<img src="assets/icon-3.png">
+			<span>432</span>
+			<img src="assets/icon-4.png">
+		</div>
+	</div>
 </div>
 
 </body>
