--- a/9-Positions/index.html
+++ b/9-Positions/index.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 <div class="image">
-	<h3>Just do it</h3>
+	<div class="background"></div>
+	<h1>Header</h1>
+	<p>Lorem ipsum, Lorem ipsumLorem ipsum,Lorem </p>
+	<div class="left"></div>
+	<div class="right"></div>
+	<div class="bottom">
+		<h3>sport</h3>
+	</div>
 </div>	
 
 
