--- a/10-Flow-Management/index.html
+++ b/10-Flow-Management/index.html
@@ -5,6 +5,30 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="box">
+		<div class="row">
+			<div class="top">
+				<div class="left">
+					<div class="col-1"></div>
+					<div class="col-2"></div>
+				</div>
+				<div class="right"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="bottom">
+				<div class="left"></div>
+					<div class="right">
+						<div class="col-1">
+						</div>
+						<div class="col-2-2">
+								<div class="col-2-2-2"></div>
+								
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
