--- a/10-Flow-Management/index.html
+++ b/10-Flow-Management/index.html
@@ -8,23 +8,27 @@
 	<div class="box">
 		<div class="row">
 			<div class="top">
-				<div class="left">
-					<div class="col-1"></div>
-					<div class="col-2"></div>
-				</div>
-				<div class="right"></div>
+				<div class="top-left"></div>
+				<div class="top-right"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="middle">
+				<div class="middle-left"></div>
+				<div class="middle-right"></div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="bottom">
-				<div class="left"></div>
-					<div class="right">
-						<div class="col-1">
-						</div>
-						<div class="col-2-2">
-								<div class="col-2-2-2"></div>
-								
+				<div class="bottom-left">
+					<div class="col-1"></div>
+					<div class="col-2"></div>
+				</div>
+				<div class="bottom-right">
+					<div class="col-1">
+						<div class="col-1-1"></div>
 					</div>
+					<div class="col-2"></div>
 				</div>
 			</div>
 		</div>
