--- a/11-Flex/index.html
+++ b/11-Flex/index.html
@@ -7,24 +7,26 @@
 <body>
 	<div class="wrapper">
 		<div class="top">
-			<div class="left">
-				<div class="left-1"></div>
-				<div class="left-2"></div>
-			</div>
-			<div class="right"></div>
+			<div class="top-left"></div>
+			<div class="top-right"></div>
 		</div>
-		<div class="bottom">
-			<div class="bottom-left">
-				<div class="bottom-left-1"></div>
-			</div>
-			<div class="bottom-middle">
-				<div class="bottom-middle-1"></div>
-			</div>
-			<div class="bottom-right">
-				<div class="bottom-right-1"></div>
-				<div class="bottom-right-2"></div>	
-			</div>	
+		<div class="middle">
+			<div class="middle-left"></div>
+			<div class="middle-right"></div>
 		</div>
+		 <div class="row">
+            <div class="bottom-left">
+                <div class="bottom-col-1"></div>
+                <div class="bottom-col-2"></div>
+                    </div>
+            <div class="bottom-right">
+                <div class="bottom-right-1">
+                    <div class="bottom-right-1-1"></div>
+        	        <div class="bottom-right-1-2"></div>
+                </div>
+
+            <div class="bottom-right-2"></div>
+        </div>
 	</div>
 </body>
 </html>
